@@ -11,22 +11,49 @@ repositories {
 }
 
 dependencies {
-	testCompile 'org.junit.jupiter:junit-jupiter:5.5.2'
+	implementation "org.openjfx:javafx-base:11.0.2"
+	implementation "org.openjfx:javafx-controls:11.0.2"
+	implementation "org.openjfx:javafx-graphics:11.0.2"
 	testImplementation 'org.junit.jupiter:junit-jupiter:5.5.2'
+	testImplementation 'org.mockito:mockito-core:3.2.4'
+	testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.1.11'
+	implementation 'com.google.code.gson:gson:2.8.6'
+	implementation 'org.hildan.fxgson:fx-gson:3.1.2'
 }
 
+javafx {
+    modules = [ 'javafx.controls', 'javafx.graphics']
+    version = '11.0.2'
+}
+
+mainClassName = 'de.lmu.ifi.sosylab.fddlj.ReversiMain'
+
 application {
-    mainClassName = ''
+    mainClassName = "$mainClassName"
+}
+
+run {
+	doFirst {
+		jvmArgs = [
+			'--module-path', classpath.asPath,
+			'--add-modules', 'javafx.controls',
+			'--add-modules', 'javafx.graphics',
+			'--add-modules', 'javafx.media'
+		]
+	}
 }
 
 jar {
   manifest {
     attributes(
-      'Class-Path': configurations.compile.collect { it.getName() }.join(' '),
-      'Main-Class': 'de.lmu.ifi.sosylab.fddlj.ReversiMain'
+      'Main-Class': "$mainClassName"
     )
   }
+  from {
+        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
+    }
 }
+
 
 checkstyle {
   configFile = file('test/checkstyle.xml')
@@ -47,7 +74,3 @@ test {
 	}
 }
 
-javafx {
-	modules = [ 'javafx.controls', 'javafx.fxml']
-	version = '11.0.2'
-}
